payment의 docker compose 수정

--- a/mas-payment-api/docker-compose.yml
+++ b/mas-payment-api/docker-compose.yml
@@ -17,10 +17,10 @@ services:
       retries: 5
       start_period: 20s
 
-  order-api:
+  payment-api:
     build: .
     ports:
-      - "8083:8083"
+      - "8084:8084"
     depends_on:
       order-db:
         condition: service_healthy
@@ -30,6 +30,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: rootpassword
     networks:
       - order-network
+      - payment-network
 
   zookeeper:
     image: bitnami/zookeeper:latest
@@ -41,6 +42,7 @@ services:
       - zookeeper_data:/bitnami/zookeeper
     networks:
       - order-network
+      - payment-network
 
   kafka:
     image: bitnami/kafka:latest
@@ -63,43 +65,6 @@ services:
       - kafka_data:/bitnami/kafka
     networks:
       - order-network
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
-    networks:
-      - order-network
-    hostname: prometheus    # 호스트 이름 명시적 지정
-    restart: always
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_USERS_ALLOW_SIGN_UP=false
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources    # 경로
-    depends_on:
-      - prometheus
-    networks:
-      - order-network
-    restart: always
 
 networks:
   order-network:
